--- a/bot.yml
+++ b/bot.yml
@@ -1,4 +1,4 @@
 name: transbot
-description: translations
+description: translations test
 avatar: .beepboop/avatar.png
 # To learn everything supported in the bot.yml file, visit https://beepboophq.com/docs/article/bot-yml
